cabal-version: 2.2

name:                prelex
version:             1.1.1
synopsis:            Sequential numerical IDs.
license:             MIT
author:              Galen Huntington <galen@alumni.reed.edu>
maintainer:          Galen Huntington <galen@alumni.reed.edu>
category:            Math
build-type:          Simple

library
  exposed-modules:
    Math.Prelex
  hs-source-dirs:
    ./
  build-depends:
    base >=4.9 && <5,
    base-prelude >=1.3 && <1.9,
    integer-logarithms ==1.0.*,
  default-extensions:
    NoImplicitPrelude
    UnicodeSyntax
    BlockArguments
    ConstraintKinds
  default-language: GHC2024

